# Vulkan

./: .gitignore
Solutions/VulkanGUI/: ChatUI.cpp  ChatUI.h  CommandBuffer.cpp  CommandBuffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  VulkanGUI.sln  VulkanGUI.vcxproj  VulkanGUI.vcxproj.filters  VulkanUtils.cpp  VulkanUtils.h  imgui.ini  main.cpp
Solutions/VulkanGUI/VulkanGUI/x64/Debug/: VulkanGUI.exe.recipe  vc143.idb
Solutions/VulkanGUI/VulkanGUI/x64/Debug/VulkanGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VulkanGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Solutions/VulkanGUI/VulkanGUI/x64/Release/: VulkanGUI.exe.recipe  VulkanGUI.ipdb
Solutions/VulkanGUI/VulkanGUI/x64/Release/VulkanGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VulkanGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Solutions/VulkanGUI/x64/Release/: imgui.ini
Solutions/VulkanProject/: Resource.h  VulkanProject.cpp  VulkanProject.rc  VulkanProject.sln  VulkanProject.vcxproj  VulkanProject.vcxproj.filters
Solutions/helloworld/: CMakeLists.txt  CMakePresets.json  VulkanUtils.cpp  VulkanUtils.h  main.cpp
Solutions/helloworld/shaders/: triangle.vert.txt
Solutions/practice_cmake/: CMakeLists.txt  main.cpp  practice_cmake.sln  practice_cmake.vcxproj  practice_cmake.vcxproj.filters
